--- a/[ML4T]파마프렌치_팩터_모델링.ipynb
+++ b/[ML4T]파마프렌치_팩터_모델링.ipynb
@@ -20,7 +20,8 @@
       "source": [
         "## Fama-French 3factor Model\n",
         "\n",
-        "현대 자산운용 업계의 과학적 팩터 투자론의 바이블이라 할 수 있는 Eugene Fama와 Kenneth French 교수가 개발한 factor model은 1993년 3factor 모델로 시작해 2014년 5factor 모델로 발전했다. 이는 자산의 리스크 프리미엄을 측정하는 전통적인 모델인 CAPM의 실효성에 대해 반론을 제기하며 지금까지 우리가 흔히 말하는 우량주, 가치주 등에 대한 운용 전략 개념을 수립한 모델이다. \\ 세부적으로 살펴보면, CAPM에서 개별자산의 수익률은 시장리스크 프리미엄의 민감도 즉 베타계수에 따라 결정된다고 하였는데, 이는 시장의 다른 리스크 팩터들을 고려하지 못한 것이다. 하지만, 파마 프렌치 모델에서는 CAPM에 시장 리스크 프리미엄 뿐만 아니라 기업의 상대적 사이즈, BE/ME(장부가 대비 시장가), 기업이익 그리고 기업의 투자 수준 등이 추가되어 자산의 기대수익률 결정된다고 주장하였다.\n",
+        "현대 자산운용 업계의 과학적 팩터 투자론의 바이블이라 할 수 있는 Eugene Fama와 Kenneth French 교수가 개발한 factor model은 1993년 3factor 모델로 시작해 2014년 5factor 모델로 발전했다. 이는 자산의 리스크 프리미엄을 측정하는 전통적인 모델인 CAPM의 실효성에 대해 반론을 제기하며 지금까지 우리가 흔히 말하는 우량주, 가치주 등에 대한 운용 전략 개념을 수립한 모델이다. \n"
+        "세부적으로 살펴보면, CAPM에서 개별자산의 수익률은 시장리스크 프리미엄의 민감도 즉 베타계수에 따라 결정된다고 하였는데, 이는 시장의 다른 리스크 팩터들을 고려하지 못한 것이다. 하지만, 파마 프렌치 모델에서는 CAPM에 시장 리스크 프리미엄 뿐만 아니라 기업의 상대적 사이즈, BE/ME(장부가 대비 시장가), 기업이익 그리고 기업의 투자 수준 등이 추가되어 자산의 기대수익률 결정된다고 주장하였다.\n",
         "\n",
         "<br>\n",
         "\n",
@@ -62,8 +63,9 @@
         "<br>\n",
         "\n",
         "$$\n",
-        "r_{1,t}=\\beta _0+\\beta _{1,F_1}F_{1,t}\\ +\\beta _{1,F_2}F_{2,t}+\\cdots +\\beta _{1,F_M}F_{M,t}+\\epsilon _{1,t}\\\\\n",
-        "r_{2,t}=\\beta _0+\\beta _{2,F_1}F_{1,t}\\ +\\beta _{2,F_2}F_{2,t}+\\cdots +\\beta _{2,F_M}F_{M,t}+\\epsilon _{2,t}\\\\ \\cdots\\\\\n",
+        "r_{1,t}=\\beta _0+\\beta _{1,F_1}F_{1,t}\\ +\\beta _{1,F_2}F_{2,t}+\\cdots +\\beta _{1,F_M}F_{M,t}+\\epsilon _{1,t} \n",
+        "r_{2,t}=\\beta _0+\\beta _{2,F_1}F_{1,t}\\ +\\beta _{2,F_2}F_{2,t}+\\cdots +\\beta _{2,F_M}F_{M,t}+\\epsilon _{2,t} \n", 
+        "\cdots \n",
         "r_{N,t}=\\beta _0+\\beta _{N,F_1}F_{1,t}\\ +\\beta _{N,F_2}F_{2,t}+\\cdots +\\beta _{N,F_M}F_{M,t}+\\epsilon _{N,t}\n",
         "$$\n",
         "\n",
