Update 파마프렌치 팩터 모델링.ipynb

--- a/파마프렌치 팩터 모델링.ipynb
+++ b/파마프렌치 팩터 모델링.ipynb
@@ -46,7 +46,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "\begin{align} R_i-R_f=\\alpha +\\beta _1(R_m-R_f)+\\beta _2SMB+\\beta _3HML+\\beta _4RMW+\\beta _5CM \end{align}"
+        "$$ \begin{align} R_i-R_f=\\alpha +\\beta _1(R_m-R_f)+\\beta _2SMB+\\beta _3HML+\\beta _4RMW+\\beta _5CM \end{align}$$"
       ],
       "metadata": {
         "id": "8OjiF9I8E8kz"
