Update 파마프렌치 팩터 모델링.ipynb

--- a/파마프렌치 팩터 모델링.ipynb
+++ b/파마프렌치 팩터 모델링.ipynb
@@ -46,9 +46,9 @@
         "\n",
         "<br>\n",
         "\n",
-        "
-            $$ R_i-R_f=\\alpha +\\beta _1(R_m-R_f)+\\beta _2SMB+\\beta _3HML+\\beta _4RMW+\\beta _5CM $$
-        "
+        "$$\n"
+        "R_i-R_f=\\alpha +\\beta _1(R_m-R_f)+\\beta _2SMB+\\beta _3HML+\\beta _4RMW+\\beta _5CM"
+        "$$\n"
       ],
       "metadata": {
         "id": "8OjiF9I8E8kz"
