--- a/[ML4T]파마프렌치_팩터_모델링.ipynb
+++ b/[ML4T]파마프렌치_팩터_모델링.ipynb
@@ -73,8 +73,7 @@
         "<br>\n",
         "\n",
         "$$\n",
-        "r_{1,t}=\\beta _0+\\beta _{1,F_1}F_{1,t}\\ +\\beta _{1,F_2}F_{2,t}+\\cdots +\\beta _{1,F_M}F_{M,t}+\\epsilon _{1,t}",
-        "<br>\n",
+        "r_{1,t}=\\beta _0+\\beta _{1,F_1}F_{1,t}\\ +\\beta _{1,F_2}F_{2,t}+\\cdots +\\beta _{1,F_M}F_{M,t}+\\epsilon _{1,t} <br>",
         "r_{2,t}=\\beta _0+\\beta _{2,F_1}F_{1,t}\\ +\\beta _{2,F_2}F_{2,t}+\\cdots +\\beta _{2,F_M}F_{M,t}+\\epsilon _{2,t}\\\\ \\cdots\\\\\n",
         "r_{N,t}=\\beta _0+\\beta _{N,F_1}F_{1,t}\\ +\\beta _{N,F_2}F_{2,t}+\\cdots +\\beta _{N,F_M}F_{M,t}+\\epsilon _{N,t}\n",
         "$$\n",
