--- a/[ML4T]파마프렌치_팩터_모델링.ipynb
+++ b/[ML4T]파마프렌치_팩터_모델링.ipynb
@@ -74,9 +74,9 @@
         "\n",
         "$$\n",
         "r_{1,t}=\\beta _0+\\beta _{1,F_1}F_{1,t}\\ +\\beta _{1,F_2}F_{2,t}+\\cdots +\\beta _{1,F_M}F_{M,t}+\\epsilon _{1,t}$$\n",
-        "$$r_{2,t}=\\beta _0+\\beta _{2,F_1}F_{1,t}\\ +\\beta _{2,F_2}F_{2,t}+\\cdots +\\beta _{2,F_M}F_{M,t}+\\epsilon _{2,t}\\\\ \\cdots\\\\\n",
-        "r_{N,t}=\\beta _0+\\beta _{N,F_1}F_{1,t}\\ +\\beta _{N,F_2}F_{2,t}+\\cdots +\\beta _{N,F_M}F_{M,t}+\\epsilon _{N,t}\n",
-        "$$\n",
+        "$$r_{2,t}=\\beta _0+\\beta _{2,F_1}F_{1,t}\\ +\\beta _{2,F_2}F_{2,t}+\\cdots +\\beta _{2,F_M}F_{M,t}+\\epsilon _{2,t}$$\n",
+        "$$ \cdots $$ \n",
+        "$$ r_{N,t}=\\beta _0+\\beta _{N,F_1}F_{1,t}\\ +\\beta _{N,F_2}F_{2,t}+\\cdots +\\beta _{N,F_M}F_{M,t}+\\epsilon _{N,t}$$\n",
         "\n",
         "<br>\n",
         "\n",
@@ -87,12 +87,10 @@
         "$$ r_t=\\lambda _0+\\lambda _t\\hat{\\beta }_i $$\n",
         "\n",
         "<br>\n",
-        "$$\n",
-        "r_{i,1}=\\lambda _{1,0}+\\lambda _{1,1}\\hat{\\beta }_{i,F_1}+\\lambda _{1,2}\\hat{\\beta }_{i,F_2}+\\cdots +\\lambda _{1,M}\\hat{\\beta }_{i,F_M}\\\\\n",
-        "r_{i,2}=\\lambda _{2,0}+\\lambda _{2,1}\\hat{\\beta }_{i,F_1}+\\lambda _{2,2}\\hat{\\beta }_{i,F_2}+\\cdots +\\lambda _{2,M}\\hat{\\beta }_{i,F_M}\\\\\n",
-        "\\cdots\\\\\n",
-        "r_{i,T}=\\lambda _{T,0}+\\lambda _{T,1}\\hat{\\beta }_{i,F_1}+\\lambda _{T,2}\\hat{\\beta }_{i,F_2}+\\cdots +\\lambda _{T,M}\\hat{\\beta }_{i,F_M}\n",
-        "$$\n",
+        "$$ r_{i,1}=\\lambda _{1,0}+\\lambda _{1,1}\\hat{\\beta }_{i,F_1}+\\lambda _{1,2}\\hat{\\beta }_{i,F_2}+\\cdots +\\lambda _{1,M}\\hat{\\beta }_{i,F_M} $$\n",
+        "$$ r_{i,2}=\\lambda _{2,0}+\\lambda _{2,1}\\hat{\\beta }_{i,F_1}+\\lambda _{2,2}\\hat{\\beta }_{i,F_2}+\\cdots +\\lambda _{2,M}\\hat{\\beta }_{i,F_M} $$\n",
+        "$$ \cdots $$ \n",
+        "$$ r_{i,T}=\\lambda _{T,0}+\\lambda _{T,1}\\hat{\\beta }_{i,F_1}+\\lambda _{T,2}\\hat{\\beta }_{i,F_2}+\\cdots +\\lambda _{T,M}\\hat{\\beta }_{i,F_M} $$\n",
         "\n",
         "<br>\n",
         "이렇게 구해진 각 팩터의 리스크프리미엄 벡터를 시간 평균으로 계산해 t검정을 실시해 어떤 팩터가 유의미한지 검정한다."
